Chore: dependencies 업데이트

--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,18 @@
   <dependencies>
     <!-- junit -->
     <!-- scope 가 test 로 설정되어 있어 테스트 컴파일 및 실행 시 사용 -->
+    <!-- junit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${org.springframework-version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -81,6 +89,33 @@
       <artifactId>mybatis</artifactId>
       <version>3.5.9</version>
     </dependency>
+    <!-- JUnit - jupiter -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>RELEASE</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- junit-jupiter-api -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.10.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.8.1</version>
+      <scope>test</scope>
+    </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>5.11.0</version>
+          <scope>test</scope>
+      </dependency>
+
 
   </dependencies>
 
