Chore: Lombok 기능에 대한 dependency 업데이트

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
           <scope>test</scope>
       </dependency>
 
+    <!-- 자바 라이브러리 - Lombok 추가 -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
 
   </dependencies>
 
