--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
     <java-version>11</java-version>
     <org.springframework-version>5.3.20</org.springframework-version>
     <mysql.version>8.0.33</mysql.version>
+    <jackson.version>2.17.1</jackson.version>
   </properties>
 
   <dependencies>
     <!-- junit -->
     <!-- scope 가 test 로 설정되어 있어 테스트 컴파일 및 실행 시 사용 -->
-    <!-- junit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -32,6 +32,8 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Spring dependencies -->
+    <!-- 웹 모듈: 개발에 필요한 핵심 기능 제공 -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -42,25 +44,25 @@
       <artifactId>spring-context-support</artifactId>
       <version>${org.springframework-version}</version>
     </dependency>
-
-    <!-- Spring dependencies -->
-    <!-- 웹 모듈: 개발에 필요한 핵심 기능 제공 -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>${org.springframework-version}</version>
     </dependency>
+
     <!-- MVC 모듈: MVC pattern 구현 시 사용 -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>${org.springframework-version}</version>
     </dependency>
+
     <!-- Servlet API 라이브러리: servlet 구현 시 필요 -->
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- DB Connection -->
@@ -77,7 +79,6 @@
       <version>${mysql.version}</version>
     </dependency>
     <!-- mybatis-spring -->
-    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
@@ -93,7 +94,7 @@
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
-        <version>RELEASE</version>
+        <version>5.10.2</version>
         <scope>test</scope>
     </dependency>
     <!-- junit-jupiter-api -->
@@ -106,15 +107,15 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.8.1</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>org.mockito</groupId>
-          <artifactId>mockito-core</artifactId>
-          <version>5.11.0</version>
-          <scope>test</scope>
-      </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.11.0</version>
+        <scope>test</scope>
+    </dependency>
 
     <!-- 자바 라이브러리 - Lombok 추가 -->
     <dependency>
@@ -122,6 +123,37 @@
       <artifactId>lombok</artifactId>
       <version>1.18.30</version>
       <scope>provided</scope>
+    </dependency>
+
+    <!-- Validation -->
+    <!-- validation-api -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+    <!-- hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.0.Final</version>
+    </dependency>
+
+    <!-- jackson for JSON -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
 
   </dependencies>
