--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,27 @@
       <version>${jackson.version}</version>
     </dependency>
 
+    <!-- 비밀번호 암호화를 위한 Maven dependency -->
+    <!-- Java 11이면 spring security 5.x 버전 사용해야 함. -->
+    <!-- spring-security-core -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.8.12</version>
+    </dependency>
+    <!-- spring-security-web -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.8.12</version>
+    </dependency>
+    <!-- spring-security-config -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.8.12</version>
+    </dependency>
+
   </dependencies>
 
   <!-- build -->
